@@ -1,0 +1,44 @@
+[general]
+description = disaggregation with NGAEast
+calculation_mode = disaggregation
+random_seed = 23
+
+[logic_tree]
+number_of_logic_tree_samples = 0
+
+[erf]
+rupture_mesh_spacing = 5
+complex_fault_mesh_spacing = 10
+width_of_mfd_bin = 0.1
+
+[site_params]
+reference_vs30_type = measured
+reference_vs30_value = 800.0
+reference_depth_to_1pt0km_per_sec = 30.0
+reference_depth_to_2pt5km_per_sec = 0.57
+
+[calculation]
+source_model_logic_tree_file = ssmLT_denver.xml
+gsim = NGAEastUSGSSeedB_bca10d
+investigation_time = 1.0
+intensity_measure_types_and_levels = {"PGA": [0.0001, 0.002]}
+truncation_level = 5.0
+maximum_distance = 200
+horiz_comp_to_geom_mean = true
+
+[geometry]
+sites_csv = sites_dsg.csv
+
+[disaggregation]
+poes_disagg = 0.002105 0.000404
+mag_bin_width = 0.5
+distance_bin_width = 25.0
+coordinate_bin_width = 100
+num_epsilon_bins = 10
+num_rlzs_disagg = 0
+disagg_outputs = Mag_Dist_Eps
+epsilon_star = true
+
+[output]
+poes = 0.002105 0.000404
+
