@@ -1,0 +1,2 @@
+lon,lat,vs30,z1pt0,z2pt5,custom_site_id
+-104.870,39.770,800,31.07,0.57,Denver
